<resources>
    <string name="app_name">ETAAndroidMockExample</string>
    <string-array name="busnames">
        <item>SmartBus</item>
        <item>DDOT</item>
        <item>Reflex</item>
    </string-array>

    <string-array name="testRoutes">
        <item>125</item>
        <item>130</item>
        <item>150</item>
    </string-array>

</resources>
